<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2"
        >
        <TextView
            android:id="@+id/num1TextViewId"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/firstValue"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/num1EditTextId"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/firstValueHint"
            android:inputType="number"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/secondValue"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/num2EditTextId"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/secondValueHint"
            android:inputType="number"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/addButtonId"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:text="@string/add"
            android:textSize="30sp"
            android:onClick="operatorCall"/>

        <Button
            android:id="@+id/subButtonId"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:text="@string/sub"
            android:textSize="30sp"
            android:onClick="operatorCall"/>

        <Button
            android:id="@+id/mulButtonId"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:text="@string/multiply"
            android:textSize="30sp"
            android:onClick="operatorCall"/>

        <Button
            android:id="@+id/divideButtonId"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:text="@string/divide"
            android:textSize="30sp"
            android:onClick="operatorCall"/>

    </LinearLayout>
    <TextView
        android:id="@+id/resultTextViewId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:gravity="center"
        android:hint="@string/result"
        android:textSize="40sp" />


</LinearLayout>